%% ERD.mmd - Mermaid ERD (updated 2026-03-30 post-migration)
erDiagram
  USERS {
    UUID id PK
    string email
  }

  ORGANIZATIONS {
    UUID id PK
    string name
    string type
  }

  ORGANIZATION_MEMBERS {
    UUID id PK
    UUID org_id FK
    UUID user_id FK
    string role
  }

  PROJECTS {
    UUID id PK
    UUID user_id FK
    UUID organization_id FK
    string name
    string description
    UUID technology_id FK
    string status
    timestamp locked_at
    UUID locked_by FK
  }

  REQUIREMENTS {
    UUID id PK
    UUID project_id FK
    string req_id
    string title
    text description
    UUID technology_id FK
    string priority
    string state
    jsonb labels
  }

  ESTIMATIONS {
    UUID id PK
    UUID requirement_id FK
    UUID user_id FK
    decimal total_days
    decimal base_hours
    decimal driver_multiplier
    integer risk_score
    decimal contingency_percent
    string scenario_name
    timestamp created_at
  }

  ESTIMATION_ACTIVITIES {
    UUID id PK
    UUID estimation_id FK
    UUID activity_id FK
    boolean is_ai_suggested
    text notes
  }

  ESTIMATION_DRIVERS {
    UUID id PK
    UUID estimation_id FK
    UUID driver_id FK
    string selected_value
  }

  ESTIMATION_RISKS {
    UUID id PK
    UUID estimation_id FK
    UUID risk_id FK
  }

  ACTIVITIES {
    UUID id PK
    string code
    string name
    text description
    decimal base_hours
    string tech_category
    string group
    boolean active
    boolean is_custom
    UUID base_activity_id FK
    UUID created_by FK
  }

  DRIVERS {
    UUID id PK
    string code
    string name
    jsonb options
  }

  RISKS {
    UUID id PK
    string code
    string name
    integer weight
  }

  TECHNOLOGIES {
    UUID id PK
    string code
    string name
    string tech_category
    jsonb default_driver_values
    jsonb default_activity_codes
    jsonb default_risks
  }

  REQUIREMENT_UNDERSTANDING {
    UUID id PK
    UUID requirement_id FK
    UUID user_id FK
    jsonb understanding_data
    integer version
  }

  IMPACT_MAP {
    UUID id PK
    UUID requirement_id FK
    UUID user_id FK
    jsonb impact_data
    integer version
  }

  ESTIMATION_BLUEPRINT {
    UUID id PK
    UUID requirement_id FK
    UUID user_id FK
    jsonb blueprint_data
    integer version
  }

  CONSULTANT_ANALYSES {
    UUID id PK
    UUID requirement_id FK
    UUID user_id FK
    jsonb analysis_data
  }

  USERS ||--o{ ORGANIZATION_MEMBERS : "member of >"
  ORGANIZATIONS ||--o{ ORGANIZATION_MEMBERS : "has members >"
  ORGANIZATIONS ||--o{ PROJECTS : "owns >"
  USERS ||--o{ PROJECTS : "created by >"
  PROJECTS ||--o{ REQUIREMENTS : "contains >"
  REQUIREMENTS ||--o{ ESTIMATIONS : "has >"
  ESTIMATIONS ||--o{ ESTIMATION_ACTIVITIES : "includes >"
  ESTIMATIONS ||--o{ ESTIMATION_DRIVERS : "includes >"
  ESTIMATIONS ||--o{ ESTIMATION_RISKS : "includes >"
  ESTIMATION_ACTIVITIES }o--|| ACTIVITIES : "refers to >"
  ESTIMATION_DRIVERS }o--|| DRIVERS : "refers to >"
  ESTIMATION_RISKS }o--|| RISKS : "refers to >"
  TECHNOLOGIES ||--o{ PROJECTS : "default for >"
  TECHNOLOGIES ||--o{ REQUIREMENTS : "overrides >"
  ACTIVITIES ||--o| ACTIVITIES : "base_activity"
  USERS ||--o{ ACTIVITIES : "created_by >"
  REQUIREMENTS ||--o{ REQUIREMENT_UNDERSTANDING : "analyzed by >"
  REQUIREMENTS ||--o{ IMPACT_MAP : "mapped by >"
  REQUIREMENTS ||--o{ ESTIMATION_BLUEPRINT : "planned by >"
  REQUIREMENTS ||--o{ CONSULTANT_ANALYSES : "reviewed by >"
